Display UI created: -Created "Selection Glow.png" in ../Assets/Art.  Attaches to Button objects in Map.unity -Created GameObject "Game Info" in Map.unity.  GameObjects "Turn Count" and "Stat List" parented to Game Info. -Created "MapDisplay.cs" in ../Assets/Scripts. Added as a component to GameObject "Game Info" -Removed references to library "UnityEditor" and all dependent functions from "MapNode.cs" and "MapNavigation.cs" -Updated "characterClass.cs".  All functions in method "Start" now moved to method "Awake"

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+/Mandate of Heaven/Assets/Scenes/Main Menu.unity
+/Mandate of Heaven/Assets/Scenes/Main Menu.unity.meta
